--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Smart-realestate
 description: Smart realestate is a full stack project which fetches and predicts house prices
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-architect
+theme: jekyll-theme-midnight
 
 gems:
   - jekyll-mentions
